gateway-api-stuff/gateway-api-stuff.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: my-gateway
  namespace: infrastructure
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    hostname: my-dummy-colored-app.net
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: Selector
        selector:
          matchLabels:
            shared-gateway-access: "true"
    # tls:
    #   certificateRefs:
    #   - name: foo-example-com

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my-route
  namespace: development
spec:
  parentRefs:
  - name: my-gateway
    namespace: infrastructure
  hostnames:
  - "*.net"
  rules:
  - matches:
    - path:
        value: /
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: my-header
                value: foo
        - type: URLRewrite
          urlRewrite:
            # hostname: elsewhere.example
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /newpath
    backendRefs:
    - name: dummy-v1-pink
      port: 3000
